vlib/v/parser/tests/unexpected_name_err.vv
fn main() {
	asfasfasfsfa
	println('text')
}
